--- a/public/stylesheets/threecolumn.css
+++ b/public/stylesheets/threecolumn.css
@@ -1,10 +1,6 @@
 #normal_container {
   float:left;
-  width: 560px;
-  border-left:211px solid #fff; 
-  /* The width and color of the left rail */
-  border-right:px solid #fff; 
-  /* The width and color of the right rail */
+  width: 811px;
   padding: 0;
   margin: 0;
     min-height: 100%;
@@ -13,7 +9,6 @@
 #normal_left{
   float:left;
   width:201px;
-  margin-left:-211px;
   position:relative;  
   padding: 25px;
 }
@@ -21,7 +16,6 @@
 #normal_middle {
   float:left;
   width:560px;
-  margin-right:-560px;
   background: url('/images/bg3.png') repeat-y top right;
   min-height:560px;
 }
